fix: overflow

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -24,6 +24,7 @@ body,
 main {
   width: 100%;
   min-height: 100vh;
+  overflow: auto;
 }
 
 ::selection {
